--- a/testesimplesdental/src/main/resources/application.properties
+++ b/testesimplesdental/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/teste_simplesdental
 spring.datasource.username=postgres
-spring.datasource.password=002#claBR
+spring.datasource.password=
